--- a/index.html
+++ b/index.html
@@ -1,134 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>All About Farhan Salik</title>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-  <style>
-    body {
-      background-color: lightgrey;
-      margin-left: 50px;
-      margin-right: 50px;
-    }
-
-    h1 {
-      font-family: Arial, Helvetica, sans-serif;
-      color: darkblue;
-      text-align: center;
-      text-shadow: 2px 2px rgb(144, 129, 230)     
-    }
-
-    h2 {
-      font-family: 'Pacifico', cursive;
-      color: darkblue;
-      text-align: left;
-    }
-
-    h3 {
-      font-family: cursive;
-      color: #89cff0;
-      text-align: center;
-    }
-
-    p {
-      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
-        sans-serif;
-      font-size: 12px;
-      text-indent: 30px;
-    }
-
-    img {
-      float: left;
-      border: darkblue;
-      border-width: 5px;
-      border-style: solid;
-      margin-right: 30px;
-      margin-top: 30px;
-      margin-bottom: 30px;
-      margin-left: 30px;
-      padding: 10px;
-    }
-  </style>
+<title>Welcome to Chitral Life</title>
+<meta name="keywords" content="Chitral,Wildlife KPK,Polo,kalash,snow leapord,martial falcon,Chilam Joshi, Golen Gol National Park, Birir, Rumboor, Bomburet">
+<meta name="description" content="Chitral is famous for its touristic attractions. Starting from the Kalash Valley to the Chitral Gol National Park, there is great diversity for tourists with different tastes.">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="css/style.css" rel="stylesheet" type="text/css"></link>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
-
 <body>
-  <h1>All About Farhan Salik</h1>
-  <h3>Contact Information</h3>
-  <p>
-    <br>
-    <!--Putting this to avoid the indent -->
-    <a href="https://www.linkedin.com/in/farhansalik/">LinkedIn </a>
-    <br>
-    <a href="mailto:msalik1@babson.edu">Email</a>
-    <br>
-    <a href="https://github.com/mfarhansalik">Github</a>
-  </p>
-  <hr>
-  <h3>
-    Quick Links
-    <br>
-    <a href="#about-me">About Me</a> &nbsp;
-    <a href="#my-interests">Interests</a>
-  </h3>
-  <a id="about-me"></a>
-  <h2>About Me</h2>
-  <p>
-    <a href="https://www.linkedin.com/in/farhansalik/"><img src="images/Farhan.jpeg" alt="Farhan Smiling"
-        title="Farhan Salik" height="150" /></a></p>
-  <p>
-    The summer of 2015 was a very special one for me. Like all Highschool
-    juniors, I was excited to enter my Senior Year. Not only that, I was
-    chosen to represent Pakistan at the
-    <a href="http://asc2015.posn.or.th/">Asian Science Camp</a>. For a Physics
-    Major, this was a dream come true. Little did I know that I would come
-    back a completely different person. At ASC, I realise how being a
-    scientist was not the career move I wanted to make. Rather, I was more
-    interested and far more talented in the Entrepreneurial aspect of building
-    new products. ASC changed my mind and that is where I first heard about
-    <a href="https://www.babson.edu/">Babson College</a>. I ended up dropping
-    all my Engineering focused schools from the Common App and applied to
-    Babson as my first and only choice. After a month of sending in my
-    application, I was accepted and thus began my journey as a Beaver.
-    <br>
-  <p>During my time at Babson, I took part in multiple events and organizations that made me grow both personally and
-    professionally. I joined AMAN in my freshman year. AMAN is one of Babson's largest organizations with almost 200
-    members active. AMAN represents the South Asian community at Babson which amounts for almost 10&#37 of the entire
-    student body. While AMAN is active throughout the year, its presence is really felt during the months of April and
-    November when the Organizations hosts the AMAN Show in Sorenson Theatre. The AMAN Show is an opportunity for the
-    widely diverse student body at Babson to come into close contact with the rich culture of South Asia. From
-    showcasing a play, dancing the night out and hosting the best dinner of the semester, AMAN does it all. During my
-    time at Babson, I took part in all the shows organized by the organization. </p>
-  <p>Apart from AMAN, I was an Admission Fellow at the Admissions Office, Executive Assistant to the President, Spark
-    Tutor for Economics, Babson Summer Study Mentor and an Assistant for the Payroll Department. I was also given the
-    opportunity to go to HEC Paris as an Exchange Student in the fall semester of 2018. At HEC, I thoroughly enjoyed the
-    European University Culture. At HEC, I took part in a Model United Nations Conference after 5 years. MUNs had been a
-    passion for me since High School yet I never got the opportunity at Babson. I was awarded the Best Delegate award in
-    the Security Council.</p>
-  <p>I returned from Paris with not only fond memories but a startup that I had founded during my exchange semester. I
-    spent the next couple of months building a mobile platform that could solve one of the biggest problems faced by
-    shippers in Pakistan. I also ended up joining Phi Gamma Nu at Babson. Phi Gamma Nu was the newest business
-    fraternity on campus. I went on to become the President of Phi Gamma Nu the following year. </p>
-  <p>At Babson I have learned the art of Entrepreneurship over the course of
-    the past 4 years. I have ventured into different industries and have
-    experienced both success and failure. I aspire to learn from these
-    experiences and translate them into valuables lessons for myself and all
-    the other entrepreneurs that I meet in the time to come&#33 As I am currently working at a Venture Capital Firm, I
-    hope to make it come true very soon.</p>
-  <hr>
-  <h2>My Interests</h2>
-  <a id="my-interests"></a>
-  <p>
-    Apart from looking at new and upcoming startups on
-    <a href="https://techcrunch.com/">Tech Crunch</a>, I love to play, watch
-    and potentially fight over Football. I am a huge
-    <a href="https://www.realmadrid.com/en">Real Madrid</a> fan and actively
-    follow all the top European Leagues.I am also a very big foodie and will often be found at different restaurants
-    around the Back Bay region in Boston.
-  </p>
-  <hr />
-  <p><br>My Work in <a href="sitemap.html">WebTech</a></p>
-</body>
+    <div class="logodiv">
+        <div class="onebythree pad20">
+            <img src="images/logo.png" alt="Chitral" width="25%" >
+        </div>
+        <div class="twobythree">
+            
+        </div>
+    </div>
+<div class="top-menu" >
+    <div class="topnav" id="myTopnav">
+        <a href="index.html" class="active">Home</a>
+        <a href="history.html">History</a>
+        <a href="tourism.html">Tourism</a>
+        <a href="wild-life.html">Wild Life</a>
+        <a href="geography.html">Geography</a>
+        <a href="sports.html">Sports</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="contact-us.html">Contact Us</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+ 
+    
+</div>
+<div class="banner threebythree">
+    <div class="slider">
+        <div><img src="images/chitral-banner.jpg" title="Chitral Main Image" alt="Chitral Main Image" width="100%"></div>
+        <div><img src="images/Chitral-history.jpg" alt="Chitral" width="100%"></div>
+        <div><img src="images/tourism-1.jpg" alt="Chitral" width="100%"></div>
+        <div><img src="images/shandur.jpg" alt="Chitral" width="100%"></div>
+    </div>
+</div>
+<div class="row">
+        <div class="onebythree "><div><h4>History</h4></div>
+            <div class="pad20"><img src="images/Chitral-history.jpg" alt="Chitral fort " width="100%">
+            <p>A Princely State in it's own right before 1969, Chitral joined Pakistan formally in 1970 as part of Malakand Division, NWFP. Chitral's history is rich in culture, customs and ethnic diversity.  <a href="history.html">>>Read More</a></p></div>
+        </div>
+        <div class="onebythree"><div><h4>Sports</h4></div>
+            <div class="pad20"><img src="images/banner.jpg" alt="Shandur Polo Festival" width="100%">
+            <p>Chitral is famous for it's athletes. Despite the harsh terrain, Chitrali people have always found a way to come together and enjoy some of the sports that are near and dear to their culture. <a  href="sports.html">>>Read More</a></p></div>
+        </div>
+        <div class="onebythree"><div><h4>Geography</h4></div>
+            <div class="pad20"><img src="images/geography.png" alt="Chitral Terrain" width="100%">
+            <p>Blessed with the most beautiful mountain ranges of Pakistan, Chitral is home to the infamous Terich Mir Peak. Standing at 7700 meters, Terich Mir overlooks the beautiful.. <a href="sports.html">>>Read More</a></p></div>
+        </div>
+</div>
+<div class="row">
+    <div class="twobythree">
+        <div class="row">
+            <div class="onebythree"><img src="images/tourism.jpg" alt="Chitral" width="100%" ></div>
+                    <div class="twobythree"><h4>Tourism</h5><p>Chitral is famous for its touristic attractions. Starting from the Kalash Valley to the Chitral Gol National Park, there is great diversity for tourists with different tastes. There are those that come to trek the deadly Terich Mir and then there are those that want to escape the busy metropolitan areas and camp in the lush green hills of Birmoghlasht for the weekend. If either one of these sounds like something you would like to do, we have more information for you <a href="tourism.html">here.</a> </p></div>
+        </div>
+        <div class="row">
+            <div class="onebythree"><img src="images/wild-life.jpg" alt="Chitral" width="100%"></div>
+                    <div class="twobythree"><h4>Wild Life</h5><p>Have you ever heard of a Markhor? Well if you haven't, it is the name of the majestic goat you see on the left. Known also as the "screw-horn goat", the Markhor is the National Animal of Pakistan. It has also been classified as a "Near Threatened" and placed on the IUCN Red List. In Chitral, one can enjoy these goats upto a proximity of 10 meters when they come down from the mountain peaks to drink water right before the sun sets over the HinduKush Range. To learn more about this majestic goat and other rare animals that inhabit the valley, click <a href="wild-life.html">here.</a></p></div>
+        </div>
+    </div>
+    <div class="onebythree">
+        <iframe width="100%" height="250px"
+        src="https://www.youtube.com/embed/SwCAsTni3Os">
+        </iframe>
+        <iframe width="100%" height="250px"
+        src="https://www.youtube.com/embed/yQMVpryFebw">
+        </iframe>
+    </div>
+</div>
+    <div class="footer">
+        <div class="row">
 
+            <div class="onebyfour text ">
+                <h4>About Author</h4>
+                <div class="onebythree"><img src="images/Farhan.jpeg" alt="Farhan" width="100%"></div>
+                <div class="twobythree "><p class="pdl-10 pdt-0 ">Farhan is a Babson Student who is originally from Chitral. He loves Polo and has a passion for sustainable tourism.</p></div>
+            </div>
+            <div class="onebyfour text">
+                <h4>Chitral in the News</h4>
+                <div>
+                    <ul>
+                        <li><a href="https://chitraltoday.net/">Chitral Today</a></li>
+                        <br>
+                        <li><a href="https://chitraltimes.com/">Chitral Times</a></li>
+                        <br>
+                        <li><a href="https://tribune.com.pk/chitral">Tribune</a></li>
+                        <br>
+                        <li><a href="https://dailychitral.com/">Daily Chitral</a></li>
+                        <br>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="onebyfour text">
+                <h4>Travel to Chitral</h4>
+                <div class="pad10">
+                    <a href="https://bookme.pk/bus/Hindukush-Express">By Road Via HinduKush Express</a><br>
+                    <a href="https://www.piac.com.pk/domestic-destinations">By Air Via PIA</a>
+                </div>
+            </div>
+            <div class="onebyfour text">
+                <h4>Hotels in Chitral</h4>
+                <div class="pad10">
+                    <a href="https://www.agoda.com/hindukush-heights/hotel/default-city-km.html?cid=1844104">Hindukush Heights </a><br>
+                    <a href="https://www.booking.com/hotel/pk/ayun-fort-inn-ayun.html?aid=318615;label=New_English_EN_PK_27027143185-gcX_3IAaLhci9HWi5tas8AS217289625109%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atidsa-199489123465%3Alp9076913%3Ali%3Adec%3Adm;sid=24102414fe2e29d1e7986129e9b8075b;dest_id=6085945;dest_type=city;dist=0;group_adults=2;group_children=0;hapos=1;hpos=1;no_rooms=1;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1606872276;srpvid=d71a09ea6a9b0073;type=total;ucfs=1&#hotelTmpl">Ayun Fort Inn</a><br>
+                    <a href="https://www.pamirinn.com.pk/">Pamir Riverside Inn Hotel</a><br>
+                    <a href="https://www.tripadvisor.com/Hotel_Review-g317115-d8635532-Reviews-Terichmir_View_Hotel-Chitral_Khyber_Pakhtunkhwa_Province.html">Tirch Mir View Hotel</a><br>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+<script >
+    function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}</script>
+<script>
+    $(document).ready(function(){
+        $('.slider').bxSlider({
+            auto: true,
+            captions: true,
+        });
+    });
+</script>
 </html>
