--- a/geography.html
+++ b/geography.html
@@ -75,7 +75,7 @@
 
             <div class="onebyfour text ">
                 <h4>About Author</h4>
-                <div class="onebythree"><img src="images/Farhan.jpeg" alt="Farhan" width="100%"></div>
+                <div class="onebythree"><img src="images/author.jpg" alt="Farhan" width="100%"></div>
                 <div class="twobythree "><p class="pdl-10 pdt-0 ">Farhan is a Babson Student who is originally from Chitral. He loves Polo and has a passion for sustainable tourism.</p></div>
             </div>
             <div class="onebyfour text">
